--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'org.robolectric:robolectric:4.4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
