--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -49,6 +52,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
     testImplementation 'junit:junit:4.+'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'org.robolectric:robolectric:4.4'
