--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
+    def coroutineVersion = '1.4.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutineVersion"
+
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
     testImplementation 'junit:junit:4.+'
@@ -56,6 +59,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutineVersion"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     // see https://stackoverflow.com/questions/67358179/android-espresso-test-error-no-static-method-loadsingleserviceornull
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
