--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    def fragmentVersion = '1.3.6'
+    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -51,5 +53,7 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'org.robolectric:robolectric:4.4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // see https://stackoverflow.com/questions/67358179/android-espresso-test-error-no-static-method-loadsingleserviceornull
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
 }
